Fix .main-menu__logo-image align

--- a/less/site.less
+++ b/less/site.less
@@ -743,6 +743,8 @@ img {
   .main-menu__logo-image {
     max-width: 100px;
     max-height: 100px;
+    display: block;
+    margin: 0 auto;
   }
 }
 
